--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -14,6 +14,7 @@ $neutral-grayish-cyan: hsl(184, 14%, 56%);
 $neutral-light-grayish-cyan: hsl(185, 41%, 84%);
 $neutral-very-light-grayish-cyan: hsl(189, 41%, 97%);
 $neutral-white: hsl(0, 0%, 100%);
+$neutral-red: hsl(14, 76%, 58%);
 
 
 @mixin style-buttons {
