--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     min-height: 100vh;
     padding-top: 50px;
     background-color: $neutral-light-grayish-cyan;
