--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   min-height: 100vh;
   padding-top: 50px;
   background-color: hsl(185, 41%, 84%);
